<resources>
    <string name="button_reset">Reset</string>
    <string name="button_solve">Solve</string>
    <string name="button_clear">Clear</string>

    <string name="keypad_1">1</string>
    <string name="keypad_2">2</string>
    <string name="keypad_3">3</string>
    <string name="keypad_4">4</string>
    <string name="keypad_5">5</string>
    <string name="keypad_6">6</string>
    <string name="keypad_7">7</string>
    <string name="keypad_8">8</string>
    <string name="keypad_9">9</string>
    <string name="blank_square">&#160;</string>

    <string name="solveError_gridEmpty">Error: Can\'t solve empty grid</string>
    <string name="solveError_gridFull">Error: Can\'t solve full grid</string>
    <string name="solveError_unsolvable">Error: unsolvable grid</string>

    <string name="solved_num_moves">Solved in %d moves</string>


    <string name="option_theme_dark">Dark theme</string>
    <string name="option_theme_light">Light theme</string>
</resources>
