<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:rowCount="3"
    android:columnCount="4"
    android:background="@color/keypad_background"
    >

    <!-- clear button -->
    <Button
        android:id="@+id/button_clear"
        android:layout_row="0"
        android:layout_column="3"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Keypad.ControlButton"
        android:text="@string/button_clear"
        />

    <!-- Reset button -->
    <Button
        android:id="@+id/button_reset"
        android:layout_row="1"
        android:layout_column="3"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Keypad.ControlButton"
        android:text="@string/button_reset"
        />

    <!-- Solve button -->
    <Button
        android:id="@+id/button_solve"
        android:layout_row="2"
        android:layout_column="3"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Keypad.ControlButton"
        android:text="@string/button_solve"
        />

    <!-- number pad -->
    <!-- row 1 -->
    <Button
        android:layout_row="0"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Keypad.Number"
        android:text="@string/keypad_1"
        />

    <Button
        android:layout_row="0"
        android:layout_column="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Keypad.Number"
        android:text="@string/keypad_2"
        />

    <Button
        android:layout_row="0"
        android:layout_column="2"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Keypad.Number"
        android:text="@string/keypad_3"
        />

    <!-- row 2 -->
    <Button
        android:layout_row="1"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Keypad.Number"
        android:text="@string/keypad_4"
        />

    <Button
        android:layout_row="1"
        android:layout_column="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Keypad.Number"
        android:text="@string/keypad_5"
        />

    <Button
        android:layout_row="1"
        android:layout_column="2"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Keypad.Number"
        android:text="@string/keypad_6"
        />

    <!-- row 3 -->
    <Button
        android:layout_row="2"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Keypad.Number"
        android:text="@string/keypad_7"
        />

    <Button
        android:layout_row="2"
        android:layout_column="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Keypad.Number"
        android:text="@string/keypad_8"
        />

    <Button
        android:layout_row="2"
        android:layout_column="2"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Keypad.Number"
        android:text="@string/keypad_9"
        />

</GridLayout>